          skin is specified. This allows developers to create skins that do
          not include the default layer.

      - Replaced copypastemove.rename with adapters to IContainerItemRenamer.
        Instead of `rename(container, oldName, newName)`, one should use
        `IContainerItemRenamer(container).renameItem(oldName, newName)`.

    Bug Fixes

      - Fixed issue #349 (zapi help missing from the online help)

      - Fixed issue #349 (Adapter registry doesn't notice __bases__ changes.)

        Thanks to "foom" for the report and the fix.

      - Fixed issue #354 (apidoc: 'SubscriptionRegistration' object has no 
                          attribute 'name')

      - Fixed issue #366 (_zope_interface_coptimizations.c compilation error)

      - Fixed issue #368 (Typo fix in src/zope/app/container/constraints.py)

      - Fixed issue #329 (apidoc + TAL)

      - Object copy events weren't dispatched for object sublocations.

      - When I converted layers and skins to interfaces, I got the layer part
        wrong and made layer interfaces extend `ILayer`. But `ILayer` is an
        `IInterface`, *not* an Interface. Layers should not extend but provide
        `ILayer`.

      - Fixed most formatting characters for i18n's datetime formatter. Only
        timezones are left.

      - Partially fixed issue #306 (Problem 2: Browser page and view directive
        cannot register serveral pages views within different layers for
        the same for, menu and title attributes.)

      - Fixed issue #353 (applySkin does not work in functional doctests).

      - Fixed issue #293 (SequenceWidget and CustomWidgetFactory).

      - TextWidgets set the value attribute to "value" when the field
        has a missing value set and was not required and when there
        was no input.

      - Fixed a bug in the adapter registry that would prevent `dict`-derived
        utilites from being retrieved correctly.
