@@ -82,8 +82,6 @@ Bug Fixes
 
 * 334: Failing RuntimeInfo tests 
 
-* 335: debug layer does not work with Zope3-trunk
-
 * 336: zpkg: defining 'zpkgsetup' resource shouldn't be necessary
 
 * 339: Improvements to generated forms
